# dailyprogrammer

./: .gitattributes  .gitignore  Jenkinsfile  README.md
python/375-card-flipping/: card_flipper.py  card_flipper_tests.py  readme.txt
python/378-havel-hakimi/: havel_hakimi.py  havel_hakimi_tests.py  readme.txt
python_files/: requirements.txt  test.py
python_files/project_239_game_of_threes/: game_of_threes.py  game_of_threes_tests.py  readme.txt
python_files/project_321_talking_clock/: readme.txt  talking_clock.py  talking_clock_tests.py
python_files/project_364_dice_roller/: dice_roller.py  dice_roller_tests.py  readme.txt
python_files/project_372_perfectly_balanced/: perfectly_balanced.py  perfectly_balanced_tests.py  readme.txt
python_files/project_374_game_of_blobs/: game_of_blobs.py  game_of_blobs_tests.py  readme.txt
python_files/project_375_card_flipping/: card_flipper.py  card_flipper_tests.py  readme.txt
rust_files/: Cargo.toml
rust_files/src/: lib.rs
rust_files/src/project_212_rovarspraket/: mod.rs  readme.txt  rovarspraket.rs
rust_files/src/project_238_fallout_hacking/: fallout_hacking.rs  game_constants.rs  mod.rs  readme.txt
rust_files/src/project_375_graph_of_thrones/: graph_of_thrones.rs  graph_of_thrones.txt  mod.rs  readme.txt
rust_files/src/project_375_print_number_digit/: mod.rs  print_number_digit.rs  readme.txt
rust_files/src/project_380_smorse/: mod.rs  readme.txt  smorse.rs
rust_files/src/project_381_yahtzee/: mod.rs  readme.txt  yahtzee.rs
rust_files/src/utility/: AVLTree.rs  avltree.rs  mod.rs
(+5 files in other folders)
