[package]
name = "rust_files"
version = "0.1.0"
authors = ["Matt McCarthy <matttmccarthy66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dailyprogrammer_lib"
path = "src/lib.rs"

[[bin]]
name = "fallout_hacking"
path = "src/bin/main.rs"

[dependencies]
rand = "0.3"
regex = "1"
